--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education Web App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,6 @@
     <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js"></script>
-    <script src="../script/script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
