--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             </div>
         </main>
     </div>
-    <script type="module" src="script/script.js" defer></script>
+    <script type="module" src="script/script.js"></script>
 </body>
 </html>
