--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         </header>
         <main>
             <div class="upload-section">
-                <input type="file" id="fileInput">
-                <button id="uploadBtn">Upload</button>
+                <label for="fileInput" class="custom-file-upload">Choose File</label>
+                <input type="file" id="fileInput" style="display: none;">
+                <button id="uploadBtn" class="upload-btn">Upload</button>
             </div>
             <div class="assignments-list" id="assignmentsList">
             </div>
