--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <input type="file" id="fileInput" style="display: none;">
                 <button id="uploadBtn" class="upload-btn">Upload</button>
             </div>
-            <div class="assignments-list" id="assignmentsList">
-            </div>
+            <div id="fileName" class="file-name">No file selected</div>
+            <div class="assignments-list" id="assignmentsList"></div>
         </main>
     </div>
     <script type="module" src="script/script.js"></script>
