--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container">
         <header>
             <h1>Assignments</h1>
+            <button id="logoutBtn" class="logout-btn">Logout</button>
         </header>
         <main>
             <div class="upload-section">
