--- a/auth/login.html
+++ b/auth/login.html
@@ -12,6 +12,7 @@
         <div class="login-form">
             <input type="email" id="emailInput" placeholder="Email" required>
             <input type="password" id="passwordInput" placeholder="Password" required>
+            <p id="forgotPasswordLink" class="hidden">Forgot password?</p>
             <button id="loginBtn">Login</button>
         </div>
         <div class="login-error" id="loginError"></div>
